<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navFeed"
        android:icon="@drawable/ic_nav_feed"
        android:title="@string/nav_feed" />
    <item
        android:id="@+id/navRecommendations"
        android:icon="@drawable/ic_nav_recommendations"
        android:title="@string/nav_recommendations" />
    <item
        android:id="@+id/navSaved"
        android:icon="@drawable/ic_nav_saved"
        android:title="@string/nav_saved" />
    <item
        android:id="@+id/navCategories"
        android:icon="@drawable/ic_nav_categories"
        android:title="@string/nav_categories" />
    <item
        android:id="@+id/navAnalytics"
        android:icon="@drawable/ic_nav_analytics"
        android:title="@string/nav_analytics" />
</menu>
